feat: add test, change application details on Menu and Order Services.